--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
 <h1>Welcome to my app</h1>
-<p>Sign up <%= link_to "here","#"%>.</p>
+<p>Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary" %>.</p>
