--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
+<div class="jumbotron" center>
 <h1>Welcome to my app</h1>
-<p>Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary" %>.</p>
+<p>
+<%= link_to "Log In", "#", class: "btn btn-default btn-lg" %>
+<%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %></p>
+</div>
